<resources>
    <string name="app_name">GrowSmart</string>
    <!--  navigation  -->
    <string name="tv_nav_beranda">Beranda</string>
    <string name="tv_nav_cuaca">Cuaca</string>
    <string name="tv_nav_forum">Forum</string>
    <string name="tv_nav_lms">LMS</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!--Beranda-->
    <string name="tvTani">Hey, Mr.Tani!</string>
    <string name="minggu_05_n">Minggu, 05 Nov 2023</string>
    <string name="tvTanya">Mau menanam apa hari ini?</string>
    <string name="berawan">Berawan</string>
    <string name="kota">Bandung</string>
    <string name="artikel">Artikel Terbaru</string>
    <string name="lihat"> Lihat semua</string>
    <string name="deskripsi_1"> Tips Sukses untuk Petani\nSayur Pemula</string>
    <string name="deskripsi_2"> tips dan trik singkat untuk memulai bercocok tanam\nsayuran dari nol.</string>
    <string name="deskripsi_3"> Pupuk, Hama, dan Teknologi</string>
    <string name="deskripsi_4"> mengenal teknik pemupukan,\nmengatasi hama,\npemanfaatan teknologi untuk pertanian sayuran</string>
    <string name="alamat"> Bandung </string>
    <string name="suhu"> 25℃ </string>
    <string name="keterangan">Kelembaban 80%</string>

    <!--Weather-->
    <string name="tittle">Cuaca Hari Ini</string>
    <string name="info">Informasi cuaca hari ini</string>
    <string name="peluang">Peluang Hujan</string>
    <string name="peluang_hujan">2%</string>
    <string name="kelembapan">Kelembapan</string>
    <string name="kelembapan_suhu">60%</string>
    <string name="index_uv">Indeks UV</string>
    <string name="index_uv_meter">0</string>
    <string name="kegiatan">Yang bisa kamu lakukan hari ini:</string>
    <string name="kegiatanKet"> Walaupun cuacanya berawan, kamu harus tetap menyiram tanamanmu, ya!</string>
    <string name="hari_ini">Hari Ini</string>
    <string name="lihat_cuaca">Lihat cuaca minggu ini</string>
    <string name="jam11">11:00</string>
    <string name="jam12">12:00</string>
    <string name="jam13">13:00</string>
    <string name="jam14">14:00</string>
    <string name="jam15">15:00</string>
    <string name="jam16">16:00</string>
    <string name="jam17">17:00</string>
    <string name="jam18">18:00</string>
    <string name="suhu_hari_ini">25℃</string>
    <string name="title_cuaca_per_jam">Cuaca Per Jam</string>
    <string name="title_cuaca_per_minggu">Cuaca Per Minggu</string>

    <!--forum-->
    <string name="txContent">Apa yang anda pikirkan?</string>
    <string name="pengguna">Joel HR</string>
    <string name="update_postingan">1 Jam lalu</string>
    <string name="deskripsi"> Sudah musim hujan,tanaman apa yang cocok yaa?</string>
    <string name="komentari">Komentari</string>


    <!--LMS-->
    <string name="lms">LMS</string>
    <string name="tanam">Bercocok Tanam</string>
    <string name="cara"> Cara Menggunakan Aplikasi</string>
    <string name="cara2">Cara Menanam Tanaman di Rumah</string>
    <string name="cara3">Jenis Media Tanam</string>
    <string name="cara5"> Cara Memilih Tanaman yang Tepat untuk dibudidayakan</string>
    <string name="cara4">Cara Merawat Tanaman</string>
    <string name="cara6">Jenis Penyakit dan Pencegahannya</string>
    <string name="cara_guide">Cara Menggunakan Aplikasi</string>
    <string name="cara_menanam">Cara Menanam Tanaman Di Rumah</string>
    <string name="cara_metan">Berbagai Macam Media Tanam</string>

    <!--Modul-->
    <string name="modul">Modul</string>
    <string name="benefit">Benefit</string>
    <string name="ulasan">Ulasan</string>
    <string name="tampilan">Fitur Informasi Cuaca</string>
    <string name="tampilan2">Artikel Pengetahuan Pertanian</string>
    <string name="tampilan3">Forum Diskusi Komunitas</string>
    <string name="mulai"> Mulai</string>
    <string name="desk">1. Memberikan panduan komprehensif tentang penggunaan fitur cuaca, artikel, dan forum dalam aplikasi petani.\n\n2. Membantu pengguna mengoptimalkan informasi cuaca untuk pengambilan keputusan pertanian yang lebih baik.\n\n3. Mendorong kolaborasi dan pertukaran pengetahuan antarpetani melalui forum diskusi yang bermanfaat.</string>
    <string name="fragment_cuaca_peluang_hujan">Peluang Hujan</string>
    <string name="fragment_cuaca_index_uv">Index Uv</string>
    <string name="fragment_cuaca_kelembapan">Kelembapan</string>

    <!--Deskripsi Artikel-->
    <string name="title3">Mengembangkan Bisnis Sayuran</string>
    <string name="des3">langkah Awal untuk Petani Pemula</string>
    <string name="title4">Rahasia Pemilihan Benih Wortel yang tepat</string>
    <string name="des4">cara pemilihan benih wortel yang berkualitas untuk pemula</string>
    <string name="nav_buat_postingan">Buat Postingan</string>
    <string name="et_posting">Apa yang anda pikirkan?</string>
    <string name="tv_masukan_gambar">Masukkan gambar</string>
    <string name="btn_posting">Posting</string>

    <!--Deskripsi Forum-->
    <string name="peringatan_gambar_kosong">Harap Masukkan Gambar</string>
    <string name="forum_cara">Buat Postingan</string>
    <string name="post">Posting</string>
    <string name="coba">waaaaaa</string>
    <string name="sebagai">Penyanyi</string>
    <string name="forum_diskusi">Forum Diskusi Komunitas</string>
    <string name="cara_artikel">Artikel Pengetahuan Pertanian</string>
    <string name="info_fitur">Fitur Informasi Cuaca</string>
    <string name="masuk_gambar">Masukkan gambar</string>
    <string name="nav_komentar">Komentar</string>
    <string name="tv_komen_user">Joel</string>
    <string name="jumlah_komentar">0 Komentar</string>

    <string name="tanam_dirumah">Cara Menanam Tanaman di Rumah"</string>
    <string name="konsep">Konsep dasar menanam tanaman di lingkungan rumah</string>
    <string name="persiapan">Persiapan Pemilihan Tanah</string>
    <string name="pilih_lokasi">Pemilihan lokasi yang Tepat</string>
    <string name="jenis">Jenis Tanaman yang cocok untuk Ditanam di rumah</string>


    <string name="macam_media">Macam-macam Media Tanam</string>
    <string name="tanah">Tanah Sebagai Media</string>
    <string name="kompos">Kompos dan Pupuk Organic</string>
    <string name="Hydroponic">Hydroponic</string>
    <string name="Aeroponic">Aeroponic</string>
    <string name="lms_learning_management_system">Learning Management System</string>

    <string name="desDetail">~~~~~~~~~~~~Deskripsi~~~~~~~~~~~~</string>
    <string name="lms_deskripsi">Deskripsi</string>

</resources>