<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.lms.BenefitFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/green_4">

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <androidx.cardview.widget.CardView
                    android:id="@+id/cv1"
                    android:layout_width="439dp"
                    android:layout_height="64dp"
                    android:layout_marginBottom="@dimen/_50sdp"
                    android:background="@drawable/bg_white">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/_10sdp"
                        android:layout_marginTop="@dimen/_20sdp"
                        android:contentDescription="image"
                        android:src="@drawable/arrow_left"
                        tools:ignore="MissingConstraints" />

                    <TextView
                        android:id="@+id/tvCuaca"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/_40sdp"
                        android:layout_marginTop="@dimen/_18sdp"
                        android:fontFamily="@font/poppins_medium"
                        android:textSize="@dimen/_14sdp"
                        android:textStyle="bold"
                        tools:text="@string/cara" />
                </androidx.cardview.widget.CardView>

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_10sdp"
                android:layout_marginTop="@dimen/_80sdp"
                android:background="@color/green_4"
                android:orientation="horizontal">

                <Button
                    android:layout_width="110dp"
                    android:layout_height="match_parent"
                    android:layout_marginEnd="@dimen/_20sdp"
                    android:backgroundTint="@color/white"
                    android:text="@string/modul"
                    android:textColor="@color/black" />

                <Button
                    android:layout_width="110dp"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/_20sdp"
                    android:backgroundTint="@color/green_5"
                    android:text="@string/benefit"
                    android:textColor="@color/white" />

                <Button
                    android:layout_width="110dp"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/white"
                    android:text="@string/ulasan"
                    android:textColor="@color/black" />
            </LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_15sdp"
                android:layout_marginTop="@dimen/_140sdp"
                android:layout_marginEnd="@dimen/_10sdp"
                android:fontFamily="@font/poppins_medium"
                android:text="@string/desk"
                android:textSize="@dimen/_14sdp"
                android:textStyle="bold" />
        </RelativeLayout>
    </ScrollView>
</FrameLayout>