<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.lms.LmsMediaTanamFragment"
    android:background="@color/green_4">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.cardview.widget.CardView
            android:id="@+id/cv1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/_50sdp"
            android:background="@drawable/bg_white">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_10sdp"
                android:layout_marginTop="@dimen/_20sdp"
                android:layout_marginBottom="@dimen/_10sdp"
                android:contentDescription="image"
                android:src="@drawable/arrow_left"
                tools:ignore="MissingConstraints" />

            <TextView
                android:id="@+id/tvCuaca"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_40sdp"
                android:layout_marginTop="@dimen/_18sdp"
                android:fontFamily="@font/poppins_medium"
                android:textSize="@dimen/_16sdp"
                android:textStyle="bold"
                tools:text="@string/lms" />
        </androidx.cardview.widget.CardView>
        <TextView
            android:id="@+id/tvJudulCara"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_70sdp"
            android:text="@string/macam_media"
            android:layout_marginStart="@dimen/_20sdp"
            android:layout_marginEnd="@dimen/_20sdp"
            android:textStyle="bold"
            android:textSize="@dimen/_14sdp"
            android:fontFamily="@font/poppins_medium"/>

        <androidx.cardview.widget.CardView
            android:id="@+id/cv2"
            android:layout_below="@id/tvJudulCara"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_20sdp"
            android:layout_marginEnd="@dimen/_20sdp"
            android:layout_marginTop="@dimen/_10sdp"
            app:cardCornerRadius="@dimen/_10sdp"
            android:background="@color/white">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_10sdp"
                android:layout_marginTop="@dimen/_10sdp"
                android:layout_marginBottom="@dimen/_10sdp"
                android:fontFamily="@font/poppins_medium"
                android:text="@string/tanah"
                android:textSize="@dimen/_12sdp"
                tools:ignore="TextSizeCheck" />
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/cv3"
            android:layout_below="@id/cv2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_20sdp"
            android:layout_marginEnd="@dimen/_20sdp"
            android:layout_marginTop="@dimen/_10sdp"
            app:cardCornerRadius="@dimen/_10sdp"
            android:background="@color/white">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_10sdp"
                android:layout_marginTop="@dimen/_10sdp"
                android:layout_marginBottom="@dimen/_10sdp"
                android:fontFamily="@font/poppins_medium"
                android:text="@string/kompos"
                android:textSize="@dimen/_12sdp"
                tools:ignore="TextSizeCheck" />
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/cv4"
            android:layout_below="@id/cv3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_20sdp"
            android:layout_marginEnd="@dimen/_20sdp"
            android:layout_marginTop="@dimen/_10sdp"
            app:cardCornerRadius="@dimen/_10sdp"
            android:background="@color/white">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_10sdp"
                android:layout_marginTop="@dimen/_10sdp"
                android:layout_marginBottom="@dimen/_10sdp"
                android:fontFamily="@font/poppins_medium"
                android:text="@string/Hydroponic"
                android:textSize="@dimen/_12sdp"
                tools:ignore="TextSizeCheck" />
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/cv5"
            android:layout_below="@id/cv4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_20sdp"
            android:layout_marginEnd="@dimen/_20sdp"
            android:layout_marginTop="@dimen/_10sdp"
            app:cardCornerRadius="@dimen/_10sdp"
            android:background="@color/white">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_10sdp"
                android:layout_marginTop="@dimen/_10sdp"
                android:layout_marginBottom="@dimen/_10sdp"
                android:fontFamily="@font/poppins_medium"
                android:text="@string/Aeroponic"
                android:textSize="@dimen/_12sdp"
                tools:ignore="TextSizeCheck" />
        </androidx.cardview.widget.CardView>
        <Button
            android:id="@+id/btnMulai"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/cv5"
            android:layout_marginStart="@dimen/_20sdp"
            android:layout_marginEnd="@dimen/_20sdp"
            android:backgroundTint="@color/green_nav"
            android:layout_marginTop="@dimen/_10sdp"
            android:text="@string/mulai"
            />

        <TextView
            android:id="@+id/tvBenefit"
            android:layout_below="@id/btnMulai"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/benefit"
            android:layout_marginTop="@dimen/_10sdp"
            android:layout_marginStart="@dimen/_20sdp"
            android:layout_marginEnd="@dimen/_20sdp"
            android:textStyle="bold"
            android:fontFamily="@font/poppins"
            android:textSize="@dimen/_14sdp"/>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/reBen"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/tvBenefit"
            android:layout_marginTop="@dimen/_10sdp"
            android:layout_marginStart="@dimen/_20sdp"
            android:layout_marginEnd="@dimen/_20sdp"
            />

        <TextView
            android:id="@+id/tvUl"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/reBen"
            android:layout_marginTop="@dimen/_10sdp"
            android:text="@string/ulasan"
            android:layout_marginStart="@dimen/_20sdp"
            android:layout_marginEnd="@dimen/_20sdp"
            android:fontFamily="@font/poppins"
            android:textSize="@dimen/_14sdp"
            android:textStyle="bold"
            />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/reUl"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/tvUl"
            android:layout_marginTop="@dimen/_10sdp"
            android:layout_marginStart="@dimen/_20sdp"
            android:layout_marginEnd="@dimen/_20sdp"
            />
    </RelativeLayout>




</ScrollView>