<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.cardview.widget.CardView
        android:layout_width="@dimen/_267sdp"
        android:layout_height="wrap_content"
        app:cardCornerRadius="@dimen/_15sdp"
        android:layout_marginBottom="@dimen/_20sdp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/_10sdp"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="@dimen/_240sdp"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/gbr1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_20sdp"
                    android:layout_marginTop="@dimen/_20sdp"
                    android:layout_marginEnd="@dimen/_20sdp"
                    android:layout_marginBottom="@dimen/_20sdp"
                    android:src="@drawable/profile" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_30sdp"
                    android:layout_marginEnd="@dimen/_20sdp"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/tvPengguna"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/poppins_medium"
                        android:text="@string/pengguna"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/tvUpdatePostingan"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/poppins_medium"
                        android:text="@string/update_postingan" />

                </LinearLayout>
            </LinearLayout>

            <TextView
                android:id="@+id/tvDeskripsi"
                android:layout_width="@dimen/_240sdp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_10sdp"
                android:fontFamily="@font/poppins_medium"
                tools:text="@string/deskripsi" />


            <ImageView
                android:id="@+id/ivImage"
                android:layout_width="@dimen/_240sdp"
                android:layout_height="@dimen/_120sdp"
                android:layout_margin="@dimen/_10sdp"
                android:scaleType="fitXY"
                tools:src="@tools:sample/avatars" />


            <com.google.android.material.button.MaterialButton
                android:layout_width="@dimen/_200sdp"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/grey_1"
                app:cornerRadius="@dimen/_5sdp"
                android:layout_gravity="center"
                android:drawableLeft="@drawable/message"
                android:text="@string/komentari"
                android:textColor="@color/black" />


        </LinearLayout>


    </androidx.cardview.widget.CardView>


</androidx.constraintlayout.widget.ConstraintLayout>